--- a/src/i18n/pl.json
+++ b/src/i18n/pl.json
@@ -1,6 +1,6 @@
 {
   "index": {
-    "title": "Tworzenie stron Zielona Góra | Projektowanie stron internetowych Zielona Góra | Sklepy internetowe Zielona Góra",
+    "title": "Tworzenie stron internetowych Zielona Góra | Projektowanie stron internetowych Zielona Góra | Sklepy internetowe Zielona Góra",
     "description": "Projektowanie, tworzenie stron internetowych Zielona Góra, Świebodzin, sklepy internetowe, integracje, systemy CRM. Kompleksowe rozwiązania IT.",
     "ogimage": "/img/default-og.webp",
     "heading": "<span class=\"mil-thin\">Usługi</span> Programistyczne<br /><span class=\"mil-thin\">Dla</span> Biznesu",
@@ -124,7 +124,7 @@
     "ofertatxt50": "Integracje"
   },
   "projekty": {
-    "title": "Projekty stron: Strony www, systemy CRM Zielona Góra | Świebodzin",
+    "title": "Projekty stron internetowych: Strony www, systemy CRM Zielona Góra | Świebodzin",
     "description": "Przegląd projektów Maxsoft: nowoczesne strony WWW, sklepy internetowe i systemy CRM dla klientów z Zielonej Góry i Świebodzina. Zobacz nasze realizacje w PHP, JavaScript i więcej.",
     "heading": "<span class=\"mil-thin\">Najnowsze</span> projekty",
     "projektytxt01": "Projekty",
