aktualizacja wersji oraz SEO

--- a/src/i18n/pl.json
+++ b/src/i18n/pl.json
@@ -1,7 +1,7 @@
 {
   "index": {
     "title": "Tworzenie stron internetowych Zielona Góra | Projektowanie stron internetowych Zielona Góra | Sklepy internetowe Zielona Góra",
-    "description": "Projektowanie, tworzenie stron internetowych Zielona Góra, Świebodzin, sklepy internetowe, integracje, systemy CRM. Kompleksowe rozwiązania IT.",
+    "description": "Projektowanie, tworzenie stron www internetowych Zielona Góra, Świebodzin, sklepy internetowe, integracje, systemy CRM. Rozwiązania IT.",
     "ogimage": "/img/default-og.webp",
     "heading": "<span class=\"mil-thin\">Usługi</span> Programistyczne<br /><span class=\"mil-thin\">Dla</span> Biznesu",
     "mainContent": "Kompleksowe usługi internetowe, w tym projektowanie stron i sklepów internetowych, tworzenie aplikacji webowych, wdrożenia systemów CMS/CRM/ERP oraz profesjonalne pozycjonowanie (SEO).",
@@ -68,7 +68,7 @@
     "menutxt10": "Polityka plików cookie"
   },
   "oferta": {
-    "title": "Oferta: Tworzenie stron www, Sklepy Internetowe, Systemy CRM Zielona Góra | Świebodzin",
+    "title": "Oferta: Tworzenie stron www, Sklepy Internetowe, Strony www, Systemy CRM Zielona Góra | Świebodzin",
     "description": "Szczegółowa oferta Maxsoft: tworzenie stron WWW, responsywnych sklepów internetowych (PrestaShop, WooCommerce), systemów CRM/ERP oraz integracji API. Usługi dla firm w Zielonej Górze i Świebodzinie z optymalizacją SEO.",
     "heading": " Projektowanie <span class=\"mil-thin\">Systemów</span><br /><span class=\"mil-thin\">Zarządzania</span> firmą",
     "mainContent": "Ogranicza <span class=\"mil-thin\">Nas</span> tylko<br /><span class=\"mil-thin\">Wyobraźnia</span>",
