--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -1,7 +1,7 @@
 {
   "index": {
-    "title": "Website Design Zielona Góra, Online Stores Świebodzin | Sulechów",
-    "description": "Professional programming services for business: website design, online stores, CRM/ERP systems in Zielona Góra and Świebodzin. Comprehensive IT solutions with SEO and 24/7 support.",
+    "title": "Maxsoft – Websites, E-commerce and CRM Systems | Zielona Góra, Świebodzin",
+    "description": "Maxsoft builds websites, online stores and CRM/ERP systems for businesses in the Lubuskie region. Custom projects, API integrations and technical support.",
     "ogimage": "/img/default-og.webp",
     "heading": "<span class=\"mil-thin\">Programming</span> Services<br /><span class=\"mil-thin\">For</span> Business",
     "mainContent": "Comprehensive internet services, including website and online store design, web application development, implementation of CMS/CRM/ERP systems, and professional search engine optimization (SEO).",
@@ -27,24 +27,24 @@
     "softtxt1": "We design modern and effective websites,<br />perfectly tailored to your business",
     "softtxt2": "<span class=\"mil-thin\">What</span> programming languages and frameworks <br /><span class=\"mil-thin\">do we use to create</span> Applications?",
     "softtxt3": "Programming Language",
-    "softtxt4": "A scripting programming language designed to generate web pages and build real-time web applications. PHP is most often used for server-side web scripting, but it can also be used for command-line data processing. The implementation of PHP together with the Apache web server and the MySQL database server is referred to as the AMP platform.",
+    "softtxt4": "At Maxsoft we use PHP to build websites, stores and backend systems. It's a stable technology we use for most of our projects.",
     "softtxt5": "Javascript Library",
-    "softtxt6": "A JavaScript programming language library used to create graphical user interfaces for web applications. It was created by Jordan Walke, a Facebook programmer, and inspired by the PHP language extension - XHP. One of the main distinguishing features of the React.js library is the virtual DOM. React stores the entire application DOM in memory.",
-    "softtxt7": "A scripting and multi-paradigm programming language, created by Netscape, most commonly used on websites. These scripts are most often used to provide interaction by responding to events, validating data entered in forms, or creating complex visual effects. JavaScript scripts run by websites have significantly limited access to the user's computer. On the server side, JavaScript can run as Node.js.",
+    "softtxt6": "We use React for projects requiring dynamic interfaces and SPA applications. It enables building efficient admin panels and complex web apps.",
+    "softtxt7": "JavaScript is the foundation of frontend and Node.js. We use it for page interactivity, form validation and server-side application development.",
     "softtxt8": "Markup Language",
-    "softtxt9": "A markup language used to create and present web pages. It is an evolution of the HTML 4 language and its XML variant (XHTML 1), developed as part of the work of the WHATWG (Web Hypertext Application Technology Working Group) and W3C.",
+    "softtxt9": "HTML5 is the standard for web page structure. We use semantic HTML for better accessibility, SEO and browser compatibility.",
     "softtxt10": "Javascript Environment",
-    "softtxt11": "An open-source, cross-platform runtime environment for developing server-side applications written in the JavaScript language. It contributed to the creation of the \"JavaScript everywhere\" paradigm, enabling developers to build applications within a single programming language instead of relying on separate server-side languages.",
+    "softtxt11": "Node.js lets us build fast server applications in JavaScript. We use it for real-time projects, APIs and developer tools.",
     "softtxt12": "Open Framework",
-    "softtxt13": "An open framework and platform for creating SPAs, written in TypeScript and supported and developed by Google. Angular was initially intended to be the second version of the AngularJS framework, but design decisions led Google to release it as a separate product, partly due to a lack of backward compatibility and a simple update path for applications written in AngularJS to Angular 2.",
+    "softtxt13": "We choose Angular for large enterprise applications. TypeScript and framework structure simplify maintenance of complex projects.",
     "softtxt14": "Laravel",
     "softtxt15": "PHP framework",
-    "softtxt16": "A web application framework written in the PHP language based on the Model-View-Controller architectural pattern. Laravel provides, among other things, a modular system for building applications with a dedicated dependency manager, various ways to access relational databases, and tools to assist in application deployment and maintenance.",
+    "softtxt16": "Laravel is our choice for PHP applications requiring scalable architecture. Eloquent, migrations and package ecosystem speed up development.",
     "softtxt17": "Back to top"
   },
   "footer": {
     "footertxt1": "Subscribe to our newsletter:",
-    "footertxt2": "<strong>Website Development Zielona Góra</strong>, Świebodzin, web applications, <strong>Web Design</strong>, CRM Systems, <strong>E-commerce Stores Zielona Góra</strong>, Sulechów, API Integrations, Database Optimization, CMS Design",
+    "footertxt2": "Websites, e-commerce, CRM and ERP systems, API integrations – Maxsoft delivers IT projects for companies in Zielona Góra, Świebodzin and the region.",
     "footertxt3": "© Copyright 2025 - Maxsoft. All rights reserved.",
     "footertxt4": "66-218 Lubrza<br />Nowa Wioska 39<br />Poland<br /><span class=\"mil-no-wrap\">(+48) 453 645 286</span>",
     "footertxt5": "65-463 Zielona Góra<br />ul.Prosta 45A<br />Poland<br /><span class=\"mil-no-wrap\">(+48) 791 821 908</span>",
@@ -68,7 +68,7 @@
     "menutxt10": "Cookie Policy"
   },
   "oferta": {
-    "title": "Offer: Websites, Online Stores, CRM Systems Zielona Góra | Świebodzin",
+    "title": "Offer – Websites, E-commerce and CRM Systems | Maxsoft Zielona Góra",
     "description": "Maxsoft's detailed offer: creating websites, responsive online stores (PrestaShop, WooCommerce), CRM/ERP systems and API integrations. Services for companies in Zielona Góra and Świebodzin with SEO optimization.",
     "heading": "Design of <span class=\"mil-thin\">Company</span><br /><span class=\"mil-thin\">Management</span> Systems",
     "mainContent": "<span class=\"mil-thin\">We are</span> limited only<br />by <span class=\"mil-thin\">Imagination</span>",
